# bookmarks-cli

./: .gitignore  Cargo.toml
src/: main.rs  unit_tests.rs
