[package]
name = "bookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25" }
clipboard = "0.5.0"             # rust-clipboard is a cross-platform library for getting and setting the contents of the OS-level…
serial_test = "0.9.0"                      # Allows for the creation of serialised Rust tests
